2009-01-20  Friedemann Kleint  <Friedemann.Kleint@nokia.com>

        Reviewed by Simon Hausmann.

        Fix spelling error in QWebPage

        * Api/qwebpage.cpp:
        (QWebPage::action):

2009-01-19  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbø.

        Fix calling of onkeypress event handlers on input elements when pressing enter
        and other text insertion commands in the Qt port.

        Similar to the win and mac ports don't execute text inserting editor
        commands on RawKeyDown but continue processing the event first in
        WebCore, i.e. also get a keypress event sent. If unhandled it will
        come back to EditorClientQt::handleKeyboardEvent later and we execute
        it then.

        This also fixes search by pressing enter on www.trafikanten.no.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::editorCommandForWebActions): Make function
        accessible from other files.
        (QWebPage::triggerAction): Adjust to new function visibility.
        * Api/qwebpage_p.h: Ditto.
        * WebCoreSupport/EditorClientQt.cpp:
        (WebCore::EditorClientQt::handleKeyboardEvent): Don't execute
        text inserting commands on RawKeyPressDown.

2009-01-16  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Rubber-stamped by Simon Hausmann.

        [Qt] Increase popup focus delay time to a sensible 500 ms.

        * tests/qwebframe/tst_qwebframe.cpp:

2009-01-16  Ariya Hidayat  <ariya.hidayat@trolltech.com>

         Reviewed by Adam Roben.

         [Qt] Prevent crash if plugin data is NULL.

         * WebCoreSupport/FrameLoaderClientQt.cpp: NULL check.
         (WebCore::FrameLoaderClientQt::objectContentType):

2009-01-16  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Rubber-stamped by Simon Hausmann.

        [Qt] Per-line cursor movement tests depend on platform-specific font
        metrics. Remove them to avoid test failures on different platforms.
